2016-12-14  Kirit Saelensminde  <kirit@felspar.com>
 * Extend `exceptions::file_error` to also take a `boost::system::error_code`.
 * Add error detection into `save_file`.

2016-11-24  Kirit Saelensminde  <kirit@felspar.com>
 Refactor `nullable` to look much more like the upcoming `std::optional`.

2016-11-22  Kirit Saelensminde  <kirit@felspar.com>
 Remove 'using namespace std::rel_ops`.

2016-11-19  Kirit Saelensminde  <kirit@felspar.com>
 Change the `fostlib::nullable` class to be implemented on top of `std::experimental::optional`.

2016-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Exceptions caught in FSL_MAIN are now printed to stderr rather than stdout.

2016-11-04  Kirit Saelensminde  <kirit@felspar.com>
 Fix a problem for Boost 1.62.0

2016-11-03  Kirit Saelensminde  <kirit@felspar.com>
 Add the Panoptes file logger as the first of a set of optional loggers.

2016-10-16  Kirit Saelensminde  <kirit@felspar.com>
 Start to make use of the Unicode support in f5-cord.

2016-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Make hashing digester and hmac digester movable.
 * Add a `set` member to the `jcursor` that overwrites old values in JSON structures.

2016-09-26  Kirit Saelensminde  <kirit@felspar.com>
 * Add logging messages about why a JWT gets rejected.
 * We need to have `<` defined on JSON so do that instead of `std::less`.

2016-09-24  Kirit Saelensminde  <kirit@felspar.com>
 Added `std::less` overload for JSON with new `fost/json` header.

2016-09-17  Kirit Saelensminde  <kirit@felspar.com>
 The colourised logger now considers logging levels around each level when choosing a colour.

2016-09-16  Kirit Saelensminde  <kirit@felspar.com>
 Remove direct calls to `boost::spirit::parse` due to threading problems.

2016-09-10  Kirit Saelensminde  <kirit@felspar.com>
 *Initial version of new splitter API that uses views to cut down on memory allocations.
 * Add additional APIs for `utf::u8_view`

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>