@@ -1,3 +1,6 @@
+2016-12-24  Kirit Saelensminde  <kirit@felspar.com>
+ Improve the types in the `fostlib::string::const_iterator` so they better model the InputIterator concept.
+
 2016-12-14  Kirit Saelensminde  <kirit@felspar.com>
  * Extend `exceptions::file_error` to also take a `boost::system::error_code`.
  * Add error detection into `save_file`.
